--- a/templates/web/pm-host.html.twig
+++ b/templates/web/pm-host.html.twig
@@ -43,7 +43,7 @@
         {% endif %}
     {% endblock %}
 </head>
-<body>
+<body data-host="pm">
 <div id="notifications"></div>
 <div id="post-office-content" class="master"></div>
 <div id="tooltip_container"></div>
@@ -97,7 +97,7 @@
 
         $.msg.registerFetchEndpoint( '{{ path('api_pm_spring') }}' );
         $.msg.toggleFetch(true);
-        $.ajax.background().load( document.getElementById('post-office-content'),'{{ url('pm_view')|e('js') }}', false, {{ (command is defined ? command : {})|json_encode|raw }});
+        $.ajax.background().load( document.getElementById('post-office-content'),'{{ url('pm_view')|e('js') }}', false, {{ (command is defined ? {command: command} : {})|json_encode|raw }});
     })();
 </script>
 </html>
