--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -286,7 +286,7 @@
     .forum-preview-container { border: none; }
 
     &.forum-preview-wrapper-bank {
-      min-height: 0;
+      min-height: max( 33vh, 120px );
       .forum-preview-container { position: unset; top: 0; left: 0; right: 0; bottom: 0; }
     }
   }
