--- a/templates/ajax/game/town/construction.html.twig
+++ b/templates/ajax/game/town/construction.html.twig
@@ -308,7 +308,7 @@
         }
 
         $.ajax.background().no_history().load( document.getElementById('forum-content'), '{{ path('forum_previewer_controller', {fid: town.forum.id, sem: constant('App\\Entity\\Thread::SEMANTIC_CONSTRUCTIONS') })|e('js') }}', false, {}, function() {
-            let container = document.querySelector('.forum-preview-wrapper');
+            let container = document.querySelector('.forum-posts');
             container.scrollTop = container.scrollHeight;
         } );
 
