--- a/templates/ajax/game/town/upgrades.html.twig
+++ b/templates/ajax/game/town/upgrades.html.twig
@@ -105,7 +105,7 @@
                     } );
             });
         $.ajax.background().no_history().load( document.getElementById('forum-content'), '{{ path('forum_previewer_controller', {fid: town.forum.id, sem: constant('App\\Entity\\Thread::SEMANTIC_DAILYVOTE') })|e('js') }}', false, {}, function() {
-            let container = document.querySelector('.forum-preview-wrapper');
+            let container = document.querySelector('.forum-posts');
             container.scrollTop = container.scrollHeight;
         } );
     </script>
