--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -86,6 +86,7 @@ div.band {
 .relative { position: relative }
 
 .full-height {height: 100%}
+.full-width {width: 100%}
 .max-height {max-height: 100%}
 
 .text-wrap-all { word-break: break-all; }
