Add soul setting to use advanced PM editor by default

--- a/templates/ajax/forum/editor.html.twig
+++ b/templates/ajax/forum/editor.html.twig
@@ -298,8 +298,13 @@
         (function() {
 
             {% if type == 'global-pm' or type == 'numb' %}
-                $.html.forEach('#{{ type }}-forum-editor *[x-extended]', elem => elem.classList.add('hidden') );
-                $.html.forEach('#{{ type }}-forum-editor *[x-non-extended]', elem => elem.classList.remove('hidden') );
+                if ($.client.config.advancedPMEditor.get()) {
+                    $.html.forEach('#{{ type }}-forum-editor *[x-extended]', elem => elem.classList.remove('hidden'));
+                    $.html.forEach('#{{ type }}-forum-editor *[x-non-extended]', elem => elem.classList.add('hidden'));
+                } else {
+                    $.html.forEach('#{{ type }}-forum-editor *[x-extended]', elem => elem.classList.add('hidden'));
+                    $.html.forEach('#{{ type }}-forum-editor *[x-non-extended]', elem => elem.classList.remove('hidden'));
+                }
             {% else %}
                 $.html.forEach('#{{ type }}-forum-editor *[x-extended]', elem => elem.classList.remove('hidden') );
                 $.html.forEach('#{{ type }}-forum-editor *[x-non-extended]', elem => elem.classList.add('hidden') );
