--- a/templates/ajax/soul/settings.html.twig
+++ b/templates/ajax/soul/settings.html.twig
@@ -517,6 +517,11 @@
                             </div>
                             <div class="padded cell rw-12">
                                 <div class="note note-lightest">
+                                    <input x-browser-setting="advancedPMEditor" type="checkbox" id="setting_browser_advancedPMEditor">&nbsp;<label for="setting_browser_advancedPMEditor">{{ 'Standartmäßig die erweiterte Editor-Ansicht für PNs verwenden'|trans({}, 'soul') }}</label>
+                                </div>
+                            </div>
+                            <div class="padded cell rw-12">
+                                <div class="note note-lightest">
                                     <input x-browser-setting="autoParseLinks" type="checkbox" id="setting_browser_autoParseLinks">&nbsp;<label for="setting_browser_autoParseLinks">{{ 'Links in eigenen Posts automatisch klickbar machen'|trans({}, 'soul') }}</label>
                                 </div>
                             </div>
